--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="wrapper">
         <div class="container">
+            <!-- navigation bar -->
             <div class="navbar">
                 <div class="logo-container">
                     <img src="./images/userAssets/m logo.png" class="logo">
@@ -20,9 +21,13 @@
                     <div><a href="#contactme">Contact Me</a></div>
                 </div>
             </div>
-  
+
+
+             <!-- hero-section -->
             <div class="hero-section">
                 <div class="faded-text">Muskan Gautam</div>
+
+                <!-- hero-section left -->
                 <div class="hero-section-left">
                     <div class="hero-section-heading">Hi!! Muskan Gautam</div>
                     <div class=" hero-section-heading hero-section-sub-heading">
@@ -33,6 +38,8 @@
                     </div>
                     <div class="btn-pink" id="btn">Hire me</div>
                 </div>
+
+                <!-- hero section right -->
                 <div class="hero-section-right">
                     <div class="absolute icons icon-plus"></div>
                     <div class="person-image">
@@ -40,6 +47,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- project section -->
         </div>
             <div class="project-section" id="projects">
                 <h2 class="page-header">Projects</h2>
@@ -158,6 +167,9 @@
                     </div>
                 </div>
             </div>
+
+
+            
         <div class="skills" class="container skill-container" id="Skills">
             <div class="skill-fade-text">Skills</div>
 
